force-app/main/default/objects/Opportunity_Feature_Assignment__c/Opportunity_Feature_Assignment__c.object-meta.xml
<CustomObject>
    <description>This is a junction object linking features with opportunities and allowing each opportunity to be related to multiple features, and each feature to be related to multiple opportunities.</description>
    <label>Opportunity Feature Assignment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Opportunity Feature Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Feature Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>