force-app/main/default/objects/Opportunity_Feature_Assignment__c/fields/acv_copy__c.field-meta.xml
<CustomField>
    <fullName>acv_copy__c</fullName>
    <label>acv copy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>