force-app/main/default/objects/Opportunity_Feature_Assignment__c/fields/Copy_of_Oppty_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Oppty_Close_Date__c</fullName>
    <label>Copy of Oppty Close Date</label>
    <type>Date</type>
</CustomField>