force-app/main/default/objects/Opportunity_Feature_Assignment__c/fields/Need_Type__c.field-meta.xml
<CustomField>
    <fullName>Need_Type__c</fullName>
    <label>Need Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nice-to-have</fullName>
            </value>
            <value>
                <fullName>Commit-needed</fullName>
            </value>
            <value>
                <fullName>Full Block</fullName>
            </value>
            <value>
                <fullName>Renewal Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>